# SoulRipper

./: .gitignore  Dockerfile  Footage!  README.md  config.yaml  docker-compose.template.yml  docker-compose.yml  pyproject.toml  requirements.txt  soulRip.bat  soulRip.sh
.devcontainer/: devcontainer.json
assets/: Untitled Diagram.drawio  crows_foot_diagram.drawio  slskd.template.yml  soul.db
docs/: TODO.md
src/: main.py  slskd_utils.py  souldb.py  spotify_client.py  spotify_utils.py
src/cli/: commands.py
src/database/: crud.py  models.py  trackdata.py
src/database/crud/: queries.py  track_crud.py
src/database/models/: playlist_tracks.py
src/database/schemas/: artist.py  playlist.py
src/database/services/: spotify_sync.py
src/downloaders/: orchestrator.py  soulseek.py  youtube.py
src/soulripper/: main.py
src/soulripper/api_clients/: __init__.py  discogs_client.py
src/soulripper/cli/: __init__.py  cli_orchestrator.py  commands.py
src/soulripper/database/: __init__.py
src/soulripper/database/crud/: __init__.py  playlist_crud.py  queries.py  track_crud.py
src/soulripper/database/models/: __init__.py  artists.py  base.py  playlist_tracks.py  playlists.py  track_artists.py  tracks.py
src/soulripper/downloaders/: __init__.py  download_orchestrator.py  events.py  orchestrator.py  soulseek.py  youtube.py
src/soulripper/spotify/: __init__.py  client.py
src/soulripper/utils/: __init__.py  app_params.py  config.py  file_utils.py  files.py  logger.py
src/spotify/: client.py
src/utils/: config.py  files.py
(+19 files in other folders)
